# ai_reporter

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml  requirements.txt  setup.py
ai_reporter/: __init__.py  config.py  report.py  report_type.py  utils.py
ai_reporter/bot/: __init__.py  client.py  image.py  prompt.py  property.py  results.py
ai_reporter/bot/client/: __init__.py  base_client.py  null_client.py  openai_client.py
ai_reporter/bot/tools/: base.py  done.py  handler.py  response.py
ai_reporter/bot/tools/git/: base.py  list_dir.py  read_file.py  search_file.py  search_string.py
ai_reporter/bot/tools/web/: __init__.py  browser.py  secret.py
ai_reporter/bot/tools/web/tools/: base.py  click.py  element.py  input.py  select.py  submit.py
ai_reporter/error/: bot.py  config.py  web.py
ai_reporter/input/: image.py  prompt.py  property.py
ai_reporter/tools/: base.py  done.py  handler.py  response.py
ai_reporter/tools/code/: __init__.py
ai_reporter/tools/code/fetcher/: __init__.py  base.py  gitlab.py  zip.py
ai_reporter/tools/code/tools/: __init__.py  base.py  find_file.py  find_string.py  list_dir.py  read_file.py
ai_reporter/tools/web/tools/: __init__.py
src/ai_reporter/: __init__.py  report.py  report_type.py  utils.py
src/ai_reporter/bot/: __init__.py  image.py  prompt.py  property.py  results.py  token_count.py
src/ai_reporter/bot/client/: __init__.py  base_client.py  null_client.py  openai_client.py
src/ai_reporter/bot/tools/: base.py  done.py  handler.py  response.py
src/ai_reporter/bot/tools/git/: __init__.py  (+7 more)
src/ai_reporter/error/: bot.py  config.py  web.py
tests/: test_tools.py
(+14 files in other folders)
