[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai_reporter"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Ogden", email = "nathan@ogden.tech" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/chompy/ai_reporter#readme"
Issues = "https://github.com/chompy/ai_reporter/issues"
Source = "https://github.com/chompy/ai_reporter"

[tool.hatch.version]
path = "src/ai_reporter/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ai_reporter tests}"

[tool.coverage.run]
source_pkgs = ["ai_reporter", "tests"]
branch = true
parallel = true
omit = [
  "src/ai_reporter/__about__.py",
]

[tool.coverage.paths]
ai_reporter = ["src/ai_reporter", "*/ai-reporter/src/ai_reporter"]
tests = ["tests", "*/ai-reporter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
